<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".lesson_2.lesson_2_1.Lesson2Dot1HomeWorkFirstActivity">

    <Button
        android:id="@+id/button_say_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/purple_500"
        android:onClick="sayHello"
        android:text="@string/button_label_say_hello"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/show_count_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/count_initial_value"
        android:textColor="@color/purple_500"
        android:textSize="120sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_count_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/purple_500"
        android:onClick="countUp"
        android:text="@string/button_label_count"
        android:textColor="@color/white" />
</LinearLayout>